# DataPak

./: .gitignore  main.py  pyproject.toml
templates/: discordinfo.html  ghinfo.html  index.html  replitinfo.html
