[tool.poetry]
name = "repl_python3_DataPak"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-oauthlib = "^1.3.0"
cchardet = "^2.1.7"
flask = "^1.1.2"
flask-session = "^0.3.2"
bs4 = "^0.0.1"
lxml = "^4.6.3"
spotipy = "^2.18.0"
spotify = "^0.10.2"
GitHub-Flask = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
